[package]
name = "REST"
version = "0.1.0"
authors = ["Mikhail Hasso <mihasso@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
image = "0.22.4"
bytes = "0.5.3"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git" }
tokio = { version = "0.2", features = ["full"] }
